# HackC_DEL

./: .gitignore  connect.sh  dataset_to_train.csv  drive.route.xml  fcd.xml  myTrace.xml  osm.netccfg  osm.polycfg  osm_ptlines.xml  osm_stops.add.xml  production.sumocfg  pyproject.toml  resault_fcd.xml  test.route.xml  test.sumocfg  test_df.csv  tracl_hackcarpathia_del.ipynb  trips.trips.xml
backend/: pyproject.toml
model/: jupyter_lab.sh  traffic.ipynb  v1.ipynb  v2.ipynb  v3.ipynb
model/runs/Apr07_08-19-57_pop-os/: events.out.tfevents.1712470797.pop-os.48921.0
model/runs/Apr07_08-29-11_pop-os/: events.out.tfevents.1712471351.pop-os.48921.1
model/runs/Apr07_08-30-01_pop-os/: events.out.tfevents.1712471401.pop-os.48921.2
model/runs/Apr07_08-30-29_pop-os/: events.out.tfevents.1712471429.pop-os.48921.3
model/runs/Apr07_08-31-52_pop-os/: events.out.tfevents.1712471512.pop-os.48921.4
model/runs/Apr07_08-33-02_pop-os/: events.out.tfevents.1712471582.pop-os.48921.5
model/runs/Apr07_08-34-07_pop-os/: events.out.tfevents.1712471647.pop-os.48921.6
model/runs/Apr07_08-34-23_pop-os/: events.out.tfevents.1712471663.pop-os.48921.7
model/runs/Apr07_08-36-40_pop-os/: events.out.tfevents.1712471800.pop-os.48921.8
model/runs/Apr07_08-37-16_pop-os/: events.out.tfevents.1712471836.pop-os.48921.9
model/runs/Apr07_08-37-57_pop-os/: events.out.tfevents.1712471877.pop-os.48921.10
model/runs/Apr07_08-38-28_pop-os/: events.out.tfevents.1712471908.pop-os.48921.11
model/runs/Apr07_08-38-44_pop-os/: events.out.tfevents.1712471924.pop-os.48921.12
(+5 files in other folders)
