[tool.poetry]
name = "hackcarpathiadel"
version = "0.1.0"
description = ""
authors = ["DamianKobylinski <damiankob12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
traci = "^1.19.0"
libsumo = "^1.19.0"
pandas = "^2.2.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
